# airan-desk

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.en.md  README.md
.github/workflows/: build.yml
cmake/: ProjectSources.cmake
doc/: build_linux.en.md  build_linux.md  build_mac.en.md  build_mac.md  build_win.en.md  build_win.md
resource/conf/: app.qss  common.ini
resource/linux/: airan-desk-autostart.desktop.in  airan-desk.desktop.in
resource/locale/: airan-desk_en_US.ts  airan-desk_zh_CN.ts
resource/windows/: main.rc
src/: main.cpp
src/app/: app_runtime.cpp  app_runtime.h  app_style.cpp  app_style.h
src/audio/: audio_capture_worker.cpp  audio_capture_worker.h  audio_echo_suppression.h  audio_playback_worker.cpp  audio_playback_worker.h
src/codec/: codec_info.h  h264_decoder.cpp  h264_decoder.h  h264_decoder_cleanup.cpp  h264_decoder_convert.cpp  h264_decoder_decode.cpp  h264_encoder.cpp  h264_encoder.h  h264_encoder_codec.cpp  h264_encoder_frames.cpp  h264_encoder_hw.cpp  h264_encoder_zerocopy_encode_win.cpp  h264_encoder_zerocopy_frame_win.cpp  h264_encoder_zerocopy_session_win.cpp  h264_profile_level.h  hardware_context_manager.cpp  hardware_context_manager.h  media_capability_probe.cpp  media_capability_probe.h
src/common/: constant.h  logger_manager.cpp  logger_manager.h  object_lifecycle.h  platform_headers.h  protocol_constants.h  qt_rtc_metatypes.h
src/desktop/: desktop_capture_manager.cpp  desktop_capture_manager.h  desktop_capture_plugin.h  desktop_capture_worker.cpp  desktop_capture_worker.h  desktop_capture_worker_cpu.cpp  desktop_capture_worker_gpu.cpp  desktop_capture_worker_gpu_scaler.cpp  desktop_capture_worker_gpu_state.cpp  desktop_capture_worker_subscribers.cpp  desktop_capture_worker_timer.cpp  desktop_grab.cpp  desktop_grab.h  desktop_grab_factory.cpp  desktop_grab_factory.h  desktop_grab_pipewire.cpp  desktop_grab_pipewire.h  desktop_grab_qt.cpp  desktop_grab_qt.h  desktop_grab_wgc.cpp  desktop_grab_wgc.h  desktop_grab_wgc_plugin.cpp
src/terminal/: native_terminal_widget.cpp  native_terminal_widget.h  native_terminal_widget_callbacks.cpp  native_terminal_widget_colors.h  native_terminal_widget_input.cpp  native_terminal_widget_mouse.cpp  native_terminal_widget_render.cpp  terminal_file_panel.cpp  terminal_file_panel.h  terminal_session.cpp  terminal_session.h  terminal_session_unix_pty.cpp  terminal_session_windows_io.cpp  terminal_session_windows_pty.cpp
src/ui/: adaptive_ui.h  app_title_bar.cpp  app_title_bar.h  control_window.cpp  control_window.h  control_window.ui  control_window_actions.cpp  control_window_android.cpp  control_window_commands.cpp  control_window_input.cpp  control_window_layout.cpp  control_window_state.cpp  control_window_toolbar.cpp  control_window_video.cpp  control_window_view_helpers.h  file_transfer_window.cpp  file_transfer_window.h  file_transfer_window.ui  file_transfer_window_browser.cpp  file_transfer_window_tasks.cpp  main_window.cpp  main_window.h  main_window.ui  main_window_client.cpp  main_window_events.cpp  main_window_ui.cpp  password_line_edit_util.cpp  password_line_edit_util.h  settings_window.cpp  settings_window.h  settings_window.ui  terminal_window.cpp  terminal_window.h  terminal_window.ui
src/util/: config_util.cpp  config_util.h  convert_util.cpp  convert_util.h  ffmpeg_util.cpp  ffmpeg_util.h  file_packet_util.cpp  file_packet_util.h  file_packet_util_file.cpp  file_packet_util_receive.cpp  file_packet_util_send.cpp  i18n_util.cpp  i18n_util.h  input_util.cpp  input_util.h  input_util_events_fallback.cpp  input_util_events_linux.cpp  input_util_events_macos.cpp  input_util_events_win.cpp  json_util.cpp  json_util.h  key_util.h  qt_callback_util.h  screen_wake_util.cpp  screen_wake_util.h  str_util.h
src/webrtc/: opus_duplex_media_handler.cpp  opus_duplex_media_handler.h  sdp_quality_patcher.cpp  sdp_quality_patcher.h  webrtc_cli.h  webrtc_cli_audio.cpp  webrtc_cli_channels.cpp  webrtc_cli_cleanup.cpp  webrtc_cli_control.cpp  webrtc_cli_file_transfer.cpp  webrtc_cli_files.cpp  webrtc_cli_input_channels.cpp  webrtc_cli_input_dispatch.cpp  webrtc_cli_lifecycle.cpp  webrtc_cli_peer.cpp  webrtc_cli_senders.cpp  webrtc_cli_signaling.cpp  webrtc_cli_terminal.cpp  webrtc_cli_video_send.cpp  webrtc_ctl.h  webrtc_ctl_audio.cpp  webrtc_ctl_channels.cpp  webrtc_ctl_cleanup.cpp  webrtc_ctl_file_transfer.cpp  webrtc_ctl_lifecycle.cpp  webrtc_ctl_media.cpp  webrtc_ctl_network.cpp  webrtc_ctl_peer.cpp  webrtc_ctl_reconnect.cpp  webrtc_ctl_signaling.cpp  webrtc_ctl_video.cpp
src/websocket/: ws_cli.cpp  ws_cli.h
tools/: update_icons.ps1
